*修复-禁止卷轴填入非配方物品